[package]
name = "allo-isolate"
version = "0.1.14-beta.1"
authors = [
    "Sunshine Foundation Developers",
    "Shady Khalifa <dev@shadykhalifa.me>",
]
edition = "2018"
description = "Run Multithreaded Rust along with Dart VM (in isolate)."
repository = "https://github.com/sunshine-protocol/allo-isolate"
keywords = ["bindings", "ffi", "isolate", "dart"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
readme = "README.md"
homepage = "https://github.com/sunshine-protocol/allo-isolate"
license-file = "LICENSE"

[dependencies]
atomic = "0.5"
pin-project = { version = "1.0.8", optional = true }
anyhow = { version = "1.0.58", optional = true }
backtrace = { version = "0.3.66", optional = true }

[dev-dependencies]
fastrand = "^1.3"

# These are used for tests
[[example]]
name = "containers"
path = "tests/containers.rs"
required-features = ["anyhow", "backtrace"]

[features]
default = []
catch-unwind = ["pin-project"]

[package.metadata.docs.rs]
all-features = true
