[package]
name = "allo-isolate"
version = "0.1.26"
authors = ["Sunshine Foundation Developers", "Shady Khalifa <dev@shadykhalifa.me>"]
edition = "2021"
description = "Run Multithreaded Rust along with Dart VM (in isolate)."
repository = "https://github.com/sunshine-protocol/allo-isolate"
keywords = ["bindings", "ffi", "isolate", "dart"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
readme = "README.md"
homepage = "https://github.com/sunshine-protocol/allo-isolate"
license-file = "LICENSE"

[dependencies]
atomic = "0.6"
pin-project = { version = "1.0.8", optional = true }
anyhow = { version = "1.0.58", optional = true }
backtrace = { version = "0.3.66", optional = true }
chrono = { version = "0.4.20", optional = true }
uuid = { version = "1.1.2", optional = true }

[dev-dependencies]
fastrand = "^2.0"
criterion = "0.5"
uuid = { version = "1.1.2", features = ["v4"] }

# These are used for tests
[[example]]
name = "containers"
path = "tests/containers.rs"
required-features = ["anyhow", "backtrace", "chrono", "uuid"]

[features]
default = []
catch-unwind = ["pin-project"]
zero-copy = []

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "uuid"
harness = false
required-features = ["uuid"]
